This is an attempt to ensure that we should the preview panel outside the confines of the sidebar container. Removing overflow: auto allows us to position elements beyond the container. We have to detect fullscreen vs non-fullscreen mode to allow for varying top positions. Also updated selected active states of the button.

--- a/packages/block-editor/src/components/block-styles/style.scss
+++ b/packages/block-editor/src/components/block-styles/style.scss
@@ -3,9 +3,13 @@
 	// Fixing the position is specific to the block inspector context.
 	&.block-inspector__block-styles .block-editor-inserter__preview-container {
 		position: fixed;
-		right: calc(#{$sidebar-width} + #{$grid-unit-40});
-		top: calc(#{$header-height} + #{$panel-header-height});
+		right: $sidebar-width + $grid-unit-40;
+		top: $header-height + $grid-unit-40 + $admin-bar-height; // $admin-bar-height;
 		left: auto;
+	}
+
+	&.is-fullscreen-active.block-inspector__block-styles .block-editor-inserter__preview-container {
+		top: $header-height + $grid-unit-40;
 	}
 
 	.block-editor-block-card__title.block-editor-block-card__title {
@@ -32,13 +36,22 @@
 		&:focus,
 		&:hover {
 			color: var(--wp-admin-theme-color);
-			box-shadow: inset 0 0 0 1px var(--wp-admin-theme-color);
+			box-shadow: inset 0 0 0 2px var(--wp-admin-theme-color);
 		}
 
 		&.is-active,
 		&.is-active:hover {
-			color: $gray-900;
-			box-shadow: inset 0 0 0 2px $gray-900;
+			background-color: $gray-800;
+			box-shadow: none;
+		}
+
+		&.is-active .block-editor-block-styles__item-text,
+		&.is-active:hover .block-editor-block-styles__item-text {
+			color: $white;
+		}
+
+		&.is-active:focus {
+			box-shadow: inset 0 0 0 1px $white, 0 0 0 2px var(--wp-admin-theme-color);
 		}
 	}
 }
